// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SeriesAbout snapshots Renders properly 1`] = `
.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-right: -0.5rem;
  margin-left: -0.5rem;
}

.c3 {
  box-sizing: border-box;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  padding-right: 0.5rem;
  padding-left: 0.5rem;
}

.c5 {
  box-sizing: border-box;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  padding-right: 0.5rem;
  padding-left: 0.5rem;
}

.c6 {
  position: relative;
  width: 100%;
}

.c6 a {
  color: black;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-image: linear-gradient( to bottom, transparent 0, #333333 1px, transparent 0 );
  background-size: 1.25px 4px;
  background-repeat: repeat-x;
  background-position: bottom;
}

.c6 a:hover {
  color: #999999;
  opacity: 1;
}

.c6 div[class*='ToolTip'] a {
  background-image: none;
  opacity: 1;
  color: inherit;
}

.c6 p,
.c6 ul,
.c6 ol,
.c6 .paragraph,
.c6 div[data-block=true] .public-DraftStyleDefault-block {
  font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
  font-size: 23px;
  line-height: 1.5em;
  -webkit-font-smoothing: antialiased;
  padding-top: 1em;
  padding-bottom: 1em;
  margin: 0;
  font-style: inherit;
}

.c6 p:first-child,
.c6 .paragraph:first-child,
.c6 div[data-block=true]:first-child .public-DraftStyleDefault-block {
  padding-top: 0;
}

.c6 p:last-child,
.c6 .paragraph:last-child,
.c6 div[data-block=true]:last-child .public-DraftStyleDefault-block {
  padding-bottom: 0;
}

.c6 ul,
.c6 ol {
  padding-left: 1em;
}

.c6 ul {
  list-style: disc;
}

.c6 ol {
  list-style: decimal;
}

.c6 li {
  font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
  font-size: 23px;
  line-height: 1.5em;
  -webkit-font-smoothing: antialiased;
  padding-top: .5em;
  padding-bottom: .5em;
}

.c6 h1 {
  font-family: Unica77LLWebRegular,Arial,serif;
  -webkit-font-smoothing: antialiased;
  font-size: 40px;
  line-height: 1.1em;
  font-weight: normal;
  padding-top: 107px;
  padding-bottom: 46px;
  margin: 0;
  position: relative;
  text-align: center;
}

.c6 h1::before {
  content: "";
  width: 8px;
  height: 8px;
  background: black;
  border-radius: 50%;
  position: absolute;
  top: 69px;
  right: calc(50% - 4px);
}

.c6 h2 {
  font-family: Unica77LLWebRegular,Arial,serif;
  -webkit-font-smoothing: antialiased;
  font-size: 32px;
  line-height: 1.1em;
  font-weight: normal;
  margin: 0;
}

.c6 h2 a {
  background-size: 1.25px 1px;
}

.c6 h2 .LinkWithTooltip__PrimaryLink-s1omtxql-0 {
  background-position: bottom !important;
}

.c6 h3 {
  font-family: Unica77LLWebRegular,Arial,serif;
  -webkit-font-smoothing: antialiased;
  font-size: 19px;
  line-height: 1.5em;
  font-weight: normal;
  padding-top: 23px;
  margin: 0;
}

.c6 h3 strong {
  font-weight: normal;
  font-family: Unica77LLWebMedium,Arial,serif;
  -webkit-font-smoothing: antialiased;
  font-size: 19px;
  line-height: 1.5em;
}

.c6 h3 a {
  background-size: 1.25px 1px;
}

.c6 blockquote {
  font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
  font-size: 40px;
  line-height: 1.1em;
  -webkit-font-smoothing: antialiased;
  text-align: left;
  font-weight: normal;
  padding-top: 46px;
  padding-bottom: 46px;
  margin: 0;
  word-break: break-word;
}

.c6 .content-end {
  display: inline-block;
  content: "";
  width: 8px;
  height: 8px;
  background: black;
  border-radius: 50%;
  margin-left: 12px;
  margin-bottom: 1px;
}

.c6 .artist-follow {
  vertical-align: middle;
  margin-left: 10px;
  cursor: pointer;
  background: none transparent;
}

.c6 .artist-follow::before {
  font-family: "artsy-icons";
  content: "";
  vertical-align: -8.5px;
  line-height: 32px;
  font-size: 32px;
}

.c6 .artist-follow::after {
  content: "Follow";
  font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
  font-size: 17px;
  line-height: 1.1em;
  -webkit-font-smoothing: antialiased;
  text-transform: none;
}

.c0 {
  color: black;
  max-width: 1200px;
  width: 100%;
}

.c2 .PartnerBlock__PartnerBlockContainer-ydgi2-0 {
  display: none;
}

.c2:first-of-type {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2:first-of-type .PartnerBlock__PartnerBlockContainer-ydgi2-0 {
  display: block;
  margin-bottom: 10px;
}

.c4 {
  font-family: Unica77LLWebRegular,Arial,serif;
  -webkit-font-smoothing: antialiased;
  font-size: 32px;
  line-height: 1.1em;
}

@media only screen and (min-width:0em) {
  .c3 {
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
    max-width: 100%;
    display: block;
  }
}

@media only screen and (min-width:48em) {
  .c3 {
    -webkit-flex-basis: 33.333333333333336%;
    -ms-flex-preferred-size: 33.333333333333336%;
    flex-basis: 33.333333333333336%;
    max-width: 33.333333333333336%;
    display: block;
  }
}

@media only screen and (min-width:0em) {
  .c5 {
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
    max-width: 100%;
    display: block;
  }
}

@media only screen and (min-width:48em) {
  .c5 {
    -webkit-flex-basis: 66.66666666666667%;
    -ms-flex-preferred-size: 66.66666666666667%;
    flex-basis: 66.66666666666667%;
    max-width: 66.66666666666667%;
    display: block;
  }
}

@media (max-width:600px) {
  .c6 p,
  .c6 ul,
  .c6 ol,
  .c6 div[data-block=true] .public-DraftStyleDefault-block {
    font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
    font-size: 19px;
    line-height: 1.5em;
    -webkit-font-smoothing: antialiased;
  }

  .c6 li {
    font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
    font-size: 19px;
    line-height: 1.5em;
    -webkit-font-smoothing: antialiased;
  }

  .c6 h1 {
    font-family: Unica77LLWebRegular,Arial,serif;
    -webkit-font-smoothing: antialiased;
    font-size: 34px;
    line-height: 1.1em;
  }

  .c6 h2 {
    font-family: Unica77LLWebRegular,Arial,serif;
    -webkit-font-smoothing: antialiased;
    font-size: 32px;
    line-height: 1.1em;
  }

  .c6 h3 {
    font-family: Unica77LLWebRegular,Arial,serif;
    -webkit-font-smoothing: antialiased;
    font-size: 16px;
    line-height: 1.1em;
    line-height: 1.5em;
  }

  .c6 h3 strong {
    font-family: Unica77LLWebMedium,Arial,serif;
    -webkit-font-smoothing: antialiased;
    font-size: 16px;
    line-height: 1.1em;
  }

  .c6 blockquote {
    font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
    font-size: 34px;
    line-height: 1.1em;
    -webkit-font-smoothing: antialiased;
    margin: 0;
  }

  .c6 .content-start {
    font-size: 55px;
  }
}

@media (max-width:900px) {
  .c2:first-of-type .PartnerBlock__PartnerBlockContainer-ydgi2-0 {
    display: none;
  }

  .c2 .PartnerBlock__PartnerBlockContainer-ydgi2-0 {
    margin-top: 60px;
    display: block;
  }
}

@media (max-width:900px) {
  .c4 {
    margin-bottom: 20px;
  }
}

<div
  className="c0 c1"
  color="black"
>
  <div
    className="c2 c3"
  >
    <div
      className="c4"
    >
      About the Series
    </div>
  </div>
  <div
    className="c2 c5"
  >
    <div
      className="SeriesAbout__description"
    >
      <div
        className="article__text-section c6"
        color="black"
      >
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": "<p>Integer posuere erat a ante venenatis dapibus posuere velit aliquet. <a href='http://artsy.net'>Curabitur blandit</a> tempus porttitor. Donec ullamcorper nulla non metus auctor fringilla. Donec ullamcorper nulla non metus auctor fringilla. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Maecenas faucibus mollis interdum. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p><p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Curabitur blandit tempus porttitor. Sed posuere consectetur est at lobortis. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Nullam quis risus eget urna mollis ornare vel eu leo.</p><p>Donec sed odio dui. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Nullam quis risus eget urna mollis ornare vel eu leo. Nulla vitae elit libero, a pharetra augue.</p>",
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SeriesAbout snapshots Renders with editDescription 1`] = `
.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-right: -0.5rem;
  margin-left: -0.5rem;
}

.c3 {
  box-sizing: border-box;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  padding-right: 0.5rem;
  padding-left: 0.5rem;
}

.c5 {
  box-sizing: border-box;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  padding-right: 0.5rem;
  padding-left: 0.5rem;
}

.c6 {
  position: relative;
  width: 100%;
}

.c6 a {
  color: black;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-image: linear-gradient( to bottom, transparent 0, #333333 1px, transparent 0 );
  background-size: 1.25px 4px;
  background-repeat: repeat-x;
  background-position: bottom;
}

.c6 a:hover {
  color: #999999;
  opacity: 1;
}

.c6 div[class*='ToolTip'] a {
  background-image: none;
  opacity: 1;
  color: inherit;
}

.c6 p,
.c6 ul,
.c6 ol,
.c6 .paragraph,
.c6 div[data-block=true] .public-DraftStyleDefault-block {
  font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
  font-size: 23px;
  line-height: 1.5em;
  -webkit-font-smoothing: antialiased;
  padding-top: 1em;
  padding-bottom: 1em;
  margin: 0;
  font-style: inherit;
}

.c6 p:first-child,
.c6 .paragraph:first-child,
.c6 div[data-block=true]:first-child .public-DraftStyleDefault-block {
  padding-top: 0;
}

.c6 p:last-child,
.c6 .paragraph:last-child,
.c6 div[data-block=true]:last-child .public-DraftStyleDefault-block {
  padding-bottom: 0;
}

.c6 ul,
.c6 ol {
  padding-left: 1em;
}

.c6 ul {
  list-style: disc;
}

.c6 ol {
  list-style: decimal;
}

.c6 li {
  font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
  font-size: 23px;
  line-height: 1.5em;
  -webkit-font-smoothing: antialiased;
  padding-top: .5em;
  padding-bottom: .5em;
}

.c6 h1 {
  font-family: Unica77LLWebRegular,Arial,serif;
  -webkit-font-smoothing: antialiased;
  font-size: 40px;
  line-height: 1.1em;
  font-weight: normal;
  padding-top: 107px;
  padding-bottom: 46px;
  margin: 0;
  position: relative;
  text-align: center;
}

.c6 h1::before {
  content: "";
  width: 8px;
  height: 8px;
  background: black;
  border-radius: 50%;
  position: absolute;
  top: 69px;
  right: calc(50% - 4px);
}

.c6 h2 {
  font-family: Unica77LLWebRegular,Arial,serif;
  -webkit-font-smoothing: antialiased;
  font-size: 32px;
  line-height: 1.1em;
  font-weight: normal;
  margin: 0;
}

.c6 h2 a {
  background-size: 1.25px 1px;
}

.c6 h2 .LinkWithTooltip__PrimaryLink-s1omtxql-0 {
  background-position: bottom !important;
}

.c6 h3 {
  font-family: Unica77LLWebRegular,Arial,serif;
  -webkit-font-smoothing: antialiased;
  font-size: 19px;
  line-height: 1.5em;
  font-weight: normal;
  padding-top: 23px;
  margin: 0;
}

.c6 h3 strong {
  font-weight: normal;
  font-family: Unica77LLWebMedium,Arial,serif;
  -webkit-font-smoothing: antialiased;
  font-size: 19px;
  line-height: 1.5em;
}

.c6 h3 a {
  background-size: 1.25px 1px;
}

.c6 blockquote {
  font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
  font-size: 40px;
  line-height: 1.1em;
  -webkit-font-smoothing: antialiased;
  text-align: left;
  font-weight: normal;
  padding-top: 46px;
  padding-bottom: 46px;
  margin: 0;
  word-break: break-word;
}

.c6 .content-end {
  display: inline-block;
  content: "";
  width: 8px;
  height: 8px;
  background: black;
  border-radius: 50%;
  margin-left: 12px;
  margin-bottom: 1px;
}

.c6 .artist-follow {
  vertical-align: middle;
  margin-left: 10px;
  cursor: pointer;
  background: none transparent;
}

.c6 .artist-follow::before {
  font-family: "artsy-icons";
  content: "";
  vertical-align: -8.5px;
  line-height: 32px;
  font-size: 32px;
}

.c6 .artist-follow::after {
  content: "Follow";
  font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
  font-size: 17px;
  line-height: 1.1em;
  -webkit-font-smoothing: antialiased;
  text-transform: none;
}

.c0 {
  color: black;
  max-width: 1200px;
  width: 100%;
}

.c2 .PartnerBlock__PartnerBlockContainer-ydgi2-0 {
  display: none;
}

.c2:first-of-type {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2:first-of-type .PartnerBlock__PartnerBlockContainer-ydgi2-0 {
  display: block;
  margin-bottom: 10px;
}

.c4 {
  font-family: Unica77LLWebRegular,Arial,serif;
  -webkit-font-smoothing: antialiased;
  font-size: 32px;
  line-height: 1.1em;
}

@media only screen and (min-width:0em) {
  .c3 {
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
    max-width: 100%;
    display: block;
  }
}

@media only screen and (min-width:48em) {
  .c3 {
    -webkit-flex-basis: 33.333333333333336%;
    -ms-flex-preferred-size: 33.333333333333336%;
    flex-basis: 33.333333333333336%;
    max-width: 33.333333333333336%;
    display: block;
  }
}

@media only screen and (min-width:0em) {
  .c5 {
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
    max-width: 100%;
    display: block;
  }
}

@media only screen and (min-width:48em) {
  .c5 {
    -webkit-flex-basis: 66.66666666666667%;
    -ms-flex-preferred-size: 66.66666666666667%;
    flex-basis: 66.66666666666667%;
    max-width: 66.66666666666667%;
    display: block;
  }
}

@media (max-width:600px) {
  .c6 p,
  .c6 ul,
  .c6 ol,
  .c6 div[data-block=true] .public-DraftStyleDefault-block {
    font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
    font-size: 19px;
    line-height: 1.5em;
    -webkit-font-smoothing: antialiased;
  }

  .c6 li {
    font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
    font-size: 19px;
    line-height: 1.5em;
    -webkit-font-smoothing: antialiased;
  }

  .c6 h1 {
    font-family: Unica77LLWebRegular,Arial,serif;
    -webkit-font-smoothing: antialiased;
    font-size: 34px;
    line-height: 1.1em;
  }

  .c6 h2 {
    font-family: Unica77LLWebRegular,Arial,serif;
    -webkit-font-smoothing: antialiased;
    font-size: 32px;
    line-height: 1.1em;
  }

  .c6 h3 {
    font-family: Unica77LLWebRegular,Arial,serif;
    -webkit-font-smoothing: antialiased;
    font-size: 16px;
    line-height: 1.1em;
    line-height: 1.5em;
  }

  .c6 h3 strong {
    font-family: Unica77LLWebMedium,Arial,serif;
    -webkit-font-smoothing: antialiased;
    font-size: 16px;
    line-height: 1.1em;
  }

  .c6 blockquote {
    font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
    font-size: 34px;
    line-height: 1.1em;
    -webkit-font-smoothing: antialiased;
    margin: 0;
  }

  .c6 .content-start {
    font-size: 55px;
  }
}

@media (max-width:900px) {
  .c2:first-of-type .PartnerBlock__PartnerBlockContainer-ydgi2-0 {
    display: none;
  }

  .c2 .PartnerBlock__PartnerBlockContainer-ydgi2-0 {
    margin-top: 60px;
    display: block;
  }
}

@media (max-width:900px) {
  .c4 {
    margin-bottom: 20px;
  }
}

<div
  className="c0 c1"
  color="black"
>
  <div
    className="c2 c3"
  >
    <div
      className="c4"
    >
      About the Series
    </div>
  </div>
  <div
    className="c2 c5"
  >
    <div
      className="article__text-section c6"
      color="black"
    >
      <div>
        Child 
        description
      </div>
    </div>
  </div>
</div>
`;

exports[`SeriesAbout snapshots Renders with editSubTitle 1`] = `
.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-right: -0.5rem;
  margin-left: -0.5rem;
}

.c3 {
  box-sizing: border-box;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  padding-right: 0.5rem;
  padding-left: 0.5rem;
}

.c5 {
  box-sizing: border-box;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  padding-right: 0.5rem;
  padding-left: 0.5rem;
}

.c6 {
  position: relative;
  width: 100%;
}

.c6 a {
  color: black;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-image: linear-gradient( to bottom, transparent 0, #333333 1px, transparent 0 );
  background-size: 1.25px 4px;
  background-repeat: repeat-x;
  background-position: bottom;
}

.c6 a:hover {
  color: #999999;
  opacity: 1;
}

.c6 div[class*='ToolTip'] a {
  background-image: none;
  opacity: 1;
  color: inherit;
}

.c6 p,
.c6 ul,
.c6 ol,
.c6 .paragraph,
.c6 div[data-block=true] .public-DraftStyleDefault-block {
  font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
  font-size: 23px;
  line-height: 1.5em;
  -webkit-font-smoothing: antialiased;
  padding-top: 1em;
  padding-bottom: 1em;
  margin: 0;
  font-style: inherit;
}

.c6 p:first-child,
.c6 .paragraph:first-child,
.c6 div[data-block=true]:first-child .public-DraftStyleDefault-block {
  padding-top: 0;
}

.c6 p:last-child,
.c6 .paragraph:last-child,
.c6 div[data-block=true]:last-child .public-DraftStyleDefault-block {
  padding-bottom: 0;
}

.c6 ul,
.c6 ol {
  padding-left: 1em;
}

.c6 ul {
  list-style: disc;
}

.c6 ol {
  list-style: decimal;
}

.c6 li {
  font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
  font-size: 23px;
  line-height: 1.5em;
  -webkit-font-smoothing: antialiased;
  padding-top: .5em;
  padding-bottom: .5em;
}

.c6 h1 {
  font-family: Unica77LLWebRegular,Arial,serif;
  -webkit-font-smoothing: antialiased;
  font-size: 40px;
  line-height: 1.1em;
  font-weight: normal;
  padding-top: 107px;
  padding-bottom: 46px;
  margin: 0;
  position: relative;
  text-align: center;
}

.c6 h1::before {
  content: "";
  width: 8px;
  height: 8px;
  background: black;
  border-radius: 50%;
  position: absolute;
  top: 69px;
  right: calc(50% - 4px);
}

.c6 h2 {
  font-family: Unica77LLWebRegular,Arial,serif;
  -webkit-font-smoothing: antialiased;
  font-size: 32px;
  line-height: 1.1em;
  font-weight: normal;
  margin: 0;
}

.c6 h2 a {
  background-size: 1.25px 1px;
}

.c6 h2 .LinkWithTooltip__PrimaryLink-s1omtxql-0 {
  background-position: bottom !important;
}

.c6 h3 {
  font-family: Unica77LLWebRegular,Arial,serif;
  -webkit-font-smoothing: antialiased;
  font-size: 19px;
  line-height: 1.5em;
  font-weight: normal;
  padding-top: 23px;
  margin: 0;
}

.c6 h3 strong {
  font-weight: normal;
  font-family: Unica77LLWebMedium,Arial,serif;
  -webkit-font-smoothing: antialiased;
  font-size: 19px;
  line-height: 1.5em;
}

.c6 h3 a {
  background-size: 1.25px 1px;
}

.c6 blockquote {
  font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
  font-size: 40px;
  line-height: 1.1em;
  -webkit-font-smoothing: antialiased;
  text-align: left;
  font-weight: normal;
  padding-top: 46px;
  padding-bottom: 46px;
  margin: 0;
  word-break: break-word;
}

.c6 .content-end {
  display: inline-block;
  content: "";
  width: 8px;
  height: 8px;
  background: black;
  border-radius: 50%;
  margin-left: 12px;
  margin-bottom: 1px;
}

.c6 .artist-follow {
  vertical-align: middle;
  margin-left: 10px;
  cursor: pointer;
  background: none transparent;
}

.c6 .artist-follow::before {
  font-family: "artsy-icons";
  content: "";
  vertical-align: -8.5px;
  line-height: 32px;
  font-size: 32px;
}

.c6 .artist-follow::after {
  content: "Follow";
  font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
  font-size: 17px;
  line-height: 1.1em;
  -webkit-font-smoothing: antialiased;
  text-transform: none;
}

.c0 {
  color: black;
  max-width: 1200px;
  width: 100%;
}

.c2 .PartnerBlock__PartnerBlockContainer-ydgi2-0 {
  display: none;
}

.c2:first-of-type {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2:first-of-type .PartnerBlock__PartnerBlockContainer-ydgi2-0 {
  display: block;
  margin-bottom: 10px;
}

.c4 {
  font-family: Unica77LLWebRegular,Arial,serif;
  -webkit-font-smoothing: antialiased;
  font-size: 32px;
  line-height: 1.1em;
}

@media only screen and (min-width:0em) {
  .c3 {
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
    max-width: 100%;
    display: block;
  }
}

@media only screen and (min-width:48em) {
  .c3 {
    -webkit-flex-basis: 33.333333333333336%;
    -ms-flex-preferred-size: 33.333333333333336%;
    flex-basis: 33.333333333333336%;
    max-width: 33.333333333333336%;
    display: block;
  }
}

@media only screen and (min-width:0em) {
  .c5 {
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
    max-width: 100%;
    display: block;
  }
}

@media only screen and (min-width:48em) {
  .c5 {
    -webkit-flex-basis: 66.66666666666667%;
    -ms-flex-preferred-size: 66.66666666666667%;
    flex-basis: 66.66666666666667%;
    max-width: 66.66666666666667%;
    display: block;
  }
}

@media (max-width:600px) {
  .c6 p,
  .c6 ul,
  .c6 ol,
  .c6 div[data-block=true] .public-DraftStyleDefault-block {
    font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
    font-size: 19px;
    line-height: 1.5em;
    -webkit-font-smoothing: antialiased;
  }

  .c6 li {
    font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
    font-size: 19px;
    line-height: 1.5em;
    -webkit-font-smoothing: antialiased;
  }

  .c6 h1 {
    font-family: Unica77LLWebRegular,Arial,serif;
    -webkit-font-smoothing: antialiased;
    font-size: 34px;
    line-height: 1.1em;
  }

  .c6 h2 {
    font-family: Unica77LLWebRegular,Arial,serif;
    -webkit-font-smoothing: antialiased;
    font-size: 32px;
    line-height: 1.1em;
  }

  .c6 h3 {
    font-family: Unica77LLWebRegular,Arial,serif;
    -webkit-font-smoothing: antialiased;
    font-size: 16px;
    line-height: 1.1em;
    line-height: 1.5em;
  }

  .c6 h3 strong {
    font-family: Unica77LLWebMedium,Arial,serif;
    -webkit-font-smoothing: antialiased;
    font-size: 16px;
    line-height: 1.1em;
  }

  .c6 blockquote {
    font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
    font-size: 34px;
    line-height: 1.1em;
    -webkit-font-smoothing: antialiased;
    margin: 0;
  }

  .c6 .content-start {
    font-size: 55px;
  }
}

@media (max-width:900px) {
  .c2:first-of-type .PartnerBlock__PartnerBlockContainer-ydgi2-0 {
    display: none;
  }

  .c2 .PartnerBlock__PartnerBlockContainer-ydgi2-0 {
    margin-top: 60px;
    display: block;
  }
}

@media (max-width:900px) {
  .c4 {
    margin-bottom: 20px;
  }
}

<div
  className="c0 c1"
  color="black"
>
  <div
    className="c2 c3"
  >
    <div
      className="c4"
    >
      <div>
        Child 
        sub_title
      </div>
    </div>
  </div>
  <div
    className="c2 c5"
  >
    <div
      className="SeriesAbout__description"
    >
      <div
        className="article__text-section c6"
        color="black"
      >
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": "<p>Integer posuere erat a ante venenatis dapibus posuere velit aliquet. <a href='http://artsy.net'>Curabitur blandit</a> tempus porttitor. Donec ullamcorper nulla non metus auctor fringilla. Donec ullamcorper nulla non metus auctor fringilla. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Maecenas faucibus mollis interdum. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p><p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Curabitur blandit tempus porttitor. Sed posuere consectetur est at lobortis. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Nullam quis risus eget urna mollis ornare vel eu leo.</p><p>Donec sed odio dui. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Nullam quis risus eget urna mollis ornare vel eu leo. Nulla vitae elit libero, a pharetra augue.</p>",
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SeriesAbout snapshots Renders with sponsor 1`] = `
.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-right: -0.5rem;
  margin-left: -0.5rem;
}

.c3 {
  box-sizing: border-box;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  padding-right: 0.5rem;
  padding-left: 0.5rem;
}

.c9 {
  box-sizing: border-box;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  padding-right: 0.5rem;
  padding-left: 0.5rem;
}

.c6 {
  display: block;
}

.c8 img {
  max-width: 240px;
  max-height: 40px;
  object-fit: contain;
  object-position: left;
}

.c7 {
  font-family: Unica77LLWebMedium,Arial,serif;
  -webkit-font-smoothing: antialiased;
  font-size: 16px;
  line-height: 1.1em;
  margin-bottom: 20px;
}

.c10 {
  position: relative;
  width: 100%;
}

.c10 a {
  color: black;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-image: linear-gradient( to bottom, transparent 0, #333333 1px, transparent 0 );
  background-size: 1.25px 4px;
  background-repeat: repeat-x;
  background-position: bottom;
}

.c10 a:hover {
  color: #999999;
  opacity: 1;
}

.c10 div[class*='ToolTip'] a {
  background-image: none;
  opacity: 1;
  color: inherit;
}

.c10 p,
.c10 ul,
.c10 ol,
.c10 .paragraph,
.c10 div[data-block=true] .public-DraftStyleDefault-block {
  font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
  font-size: 23px;
  line-height: 1.5em;
  -webkit-font-smoothing: antialiased;
  padding-top: 1em;
  padding-bottom: 1em;
  margin: 0;
  font-style: inherit;
}

.c10 p:first-child,
.c10 .paragraph:first-child,
.c10 div[data-block=true]:first-child .public-DraftStyleDefault-block {
  padding-top: 0;
}

.c10 p:last-child,
.c10 .paragraph:last-child,
.c10 div[data-block=true]:last-child .public-DraftStyleDefault-block {
  padding-bottom: 0;
}

.c10 ul,
.c10 ol {
  padding-left: 1em;
}

.c10 ul {
  list-style: disc;
}

.c10 ol {
  list-style: decimal;
}

.c10 li {
  font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
  font-size: 23px;
  line-height: 1.5em;
  -webkit-font-smoothing: antialiased;
  padding-top: .5em;
  padding-bottom: .5em;
}

.c10 h1 {
  font-family: Unica77LLWebRegular,Arial,serif;
  -webkit-font-smoothing: antialiased;
  font-size: 40px;
  line-height: 1.1em;
  font-weight: normal;
  padding-top: 107px;
  padding-bottom: 46px;
  margin: 0;
  position: relative;
  text-align: center;
}

.c10 h1::before {
  content: "";
  width: 8px;
  height: 8px;
  background: black;
  border-radius: 50%;
  position: absolute;
  top: 69px;
  right: calc(50% - 4px);
}

.c10 h2 {
  font-family: Unica77LLWebRegular,Arial,serif;
  -webkit-font-smoothing: antialiased;
  font-size: 32px;
  line-height: 1.1em;
  font-weight: normal;
  margin: 0;
}

.c10 h2 a {
  background-size: 1.25px 1px;
}

.c10 h2 .LinkWithTooltip__PrimaryLink-s1omtxql-0 {
  background-position: bottom !important;
}

.c10 h3 {
  font-family: Unica77LLWebRegular,Arial,serif;
  -webkit-font-smoothing: antialiased;
  font-size: 19px;
  line-height: 1.5em;
  font-weight: normal;
  padding-top: 23px;
  margin: 0;
}

.c10 h3 strong {
  font-weight: normal;
  font-family: Unica77LLWebMedium,Arial,serif;
  -webkit-font-smoothing: antialiased;
  font-size: 19px;
  line-height: 1.5em;
}

.c10 h3 a {
  background-size: 1.25px 1px;
}

.c10 blockquote {
  font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
  font-size: 40px;
  line-height: 1.1em;
  -webkit-font-smoothing: antialiased;
  text-align: left;
  font-weight: normal;
  padding-top: 46px;
  padding-bottom: 46px;
  margin: 0;
  word-break: break-word;
}

.c10 .content-end {
  display: inline-block;
  content: "";
  width: 8px;
  height: 8px;
  background: black;
  border-radius: 50%;
  margin-left: 12px;
  margin-bottom: 1px;
}

.c10 .artist-follow {
  vertical-align: middle;
  margin-left: 10px;
  cursor: pointer;
  background: none transparent;
}

.c10 .artist-follow::before {
  font-family: "artsy-icons";
  content: "";
  vertical-align: -8.5px;
  line-height: 32px;
  font-size: 32px;
}

.c10 .artist-follow::after {
  content: "Follow";
  font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
  font-size: 17px;
  line-height: 1.1em;
  -webkit-font-smoothing: antialiased;
  text-transform: none;
}

.c0 {
  color: black;
  max-width: 1200px;
  width: 100%;
}

.c2 .c5 {
  display: none;
}

.c2:first-of-type {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2:first-of-type .c5 {
  display: block;
  margin-bottom: 10px;
}

.c4 {
  font-family: Unica77LLWebRegular,Arial,serif;
  -webkit-font-smoothing: antialiased;
  font-size: 32px;
  line-height: 1.1em;
}

@media only screen and (min-width:0em) {
  .c3 {
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
    max-width: 100%;
    display: block;
  }
}

@media only screen and (min-width:48em) {
  .c3 {
    -webkit-flex-basis: 33.333333333333336%;
    -ms-flex-preferred-size: 33.333333333333336%;
    flex-basis: 33.333333333333336%;
    max-width: 33.333333333333336%;
    display: block;
  }
}

@media only screen and (min-width:0em) {
  .c9 {
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
    max-width: 100%;
    display: block;
  }
}

@media only screen and (min-width:48em) {
  .c9 {
    -webkit-flex-basis: 66.66666666666667%;
    -ms-flex-preferred-size: 66.66666666666667%;
    flex-basis: 66.66666666666667%;
    max-width: 66.66666666666667%;
    display: block;
  }
}

@media (max-width:720px) {
  .c7 {
    font-family: Unica77LLWebMedium,Arial,serif;
    -webkit-font-smoothing: antialiased;
    font-size: 14px;
    line-height: 1.4em;
  }
}

@media (max-width:600px) {
  .c10 p,
  .c10 ul,
  .c10 ol,
  .c10 div[data-block=true] .public-DraftStyleDefault-block {
    font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
    font-size: 19px;
    line-height: 1.5em;
    -webkit-font-smoothing: antialiased;
  }

  .c10 li {
    font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
    font-size: 19px;
    line-height: 1.5em;
    -webkit-font-smoothing: antialiased;
  }

  .c10 h1 {
    font-family: Unica77LLWebRegular,Arial,serif;
    -webkit-font-smoothing: antialiased;
    font-size: 34px;
    line-height: 1.1em;
  }

  .c10 h2 {
    font-family: Unica77LLWebRegular,Arial,serif;
    -webkit-font-smoothing: antialiased;
    font-size: 32px;
    line-height: 1.1em;
  }

  .c10 h3 {
    font-family: Unica77LLWebRegular,Arial,serif;
    -webkit-font-smoothing: antialiased;
    font-size: 16px;
    line-height: 1.1em;
    line-height: 1.5em;
  }

  .c10 h3 strong {
    font-family: Unica77LLWebMedium,Arial,serif;
    -webkit-font-smoothing: antialiased;
    font-size: 16px;
    line-height: 1.1em;
  }

  .c10 blockquote {
    font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
    font-size: 34px;
    line-height: 1.1em;
    -webkit-font-smoothing: antialiased;
    margin: 0;
  }

  .c10 .content-start {
    font-size: 55px;
  }
}

@media (max-width:900px) {
  .c2:first-of-type .c5 {
    display: none;
  }

  .c2 .c5 {
    margin-top: 60px;
    display: block;
  }
}

@media (max-width:900px) {
  .c4 {
    margin-bottom: 20px;
  }
}

<div
  className="c0 c1"
  color="black"
>
  <div
    className="c2 c3"
  >
    <div
      className="c4"
    >
      About the Series
    </div>
    <div
      className="PartnerBlock c5 c6"
    >
      <div
        className="c7"
      >
        Presented in Partnership with
      </div>
      <div
        className="c8"
      >
        <a
          href="http://artsy.net"
          onClick={[Function]}
          target="_blank"
        >
          <img
            src="https://d7hftxdivxxvm.cloudfront.net?resize_to=width&src=https%3A%2F%2Fartsy-media-uploads.s3.amazonaws.com%2FAjncVmjZHFM4Z-0b6nPz8A%252FGUCCI.png&width=240&quality=80"
          />
        </a>
      </div>
    </div>
  </div>
  <div
    className="c2 c9"
  >
    <div
      className="SeriesAbout__description"
    >
      <div
        className="article__text-section c10"
        color="black"
      >
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": "<p>Integer posuere erat a ante venenatis dapibus posuere velit aliquet. <a href='http://artsy.net'>Curabitur blandit</a> tempus porttitor. Donec ullamcorper nulla non metus auctor fringilla. Donec ullamcorper nulla non metus auctor fringilla. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Maecenas faucibus mollis interdum. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p><p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Curabitur blandit tempus porttitor. Sed posuere consectetur est at lobortis. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Nullam quis risus eget urna mollis ornare vel eu leo.</p><p>Donec sed odio dui. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Nullam quis risus eget urna mollis ornare vel eu leo. Nulla vitae elit libero, a pharetra augue.</p>",
            }
          }
        />
      </div>
    </div>
    <div
      className="PartnerBlock c5 c6"
    >
      <div
        className="c7"
      >
        Presented in Partnership with
      </div>
      <div
        className="c8"
      >
        <a
          href="http://artsy.net"
          onClick={[Function]}
          target="_blank"
        >
          <img
            src="https://d7hftxdivxxvm.cloudfront.net?resize_to=width&src=https%3A%2F%2Fartsy-media-uploads.s3.amazonaws.com%2FAjncVmjZHFM4Z-0b6nPz8A%252FGUCCI.png&width=240&quality=80"
          />
        </a>
      </div>
    </div>
  </div>
</div>
`;
